--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Home Page</title>
-    </head>
-    <body>
-        <h1>Home Page!</h1>
-        {% for x in content %}
-                <p>{{x}}</p>
-        {% endfor %}
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}Home Page{% endblock %}
+{% block content %}
+<h1>Test</h1>
+{% endblock %}
